# JMP-Peft

./: .gitignore  README.md  _quarto.yml  env.yaml  fail-rocm60.py  frontier-cp-metadatas.sh  omniperf.sh  perlmutter-scratch.sh  perlmutter.sh  pyproject.toml  rocm-failing-reprod.py  rocm-test.ipynb  rocm53.sh  rocm57env.sh  rocm60.sh  rocm60env.sh  rocm_test.py  session.py  setup-fair.sh  setup-frontier-rocm53.sh  setup-frontier-rocm57.sh  setup-frontier-rocm60.sh  setup-frontier.sh  setup-fung-cluster.sh  setup-summit.sh  setup.sh  slides.html  slides.ipynb  summit-py310.sh  summit-scratch.sh
apptainer/: Dockerfile  container.def  setup-frontier.sh
config/fair/: 7_17_jmp_s.py
config/ft_old/: jmp_l_finetune.ipynb  jmp_l_finetune_dlora_qm9.py  jmp_l_finetune_lora_matbench.py  jmp_l_finetune_lora_matbench_discovery.py  jmp_l_finetune_lora_qm9.py  jmp_l_finetune_lora_qm9_perf.py  jmp_l_finetune_lora_rmd17.py  jmp_l_pretrain.ipynb
config/pretrain/: generic.py  goc.py  grahpormer.py  graphormer-largest.py  graphormer.py  jmp_l_finetune.ipynb  jmp_l_finetune_dlora_qm9.py  jmp_l_finetune_lora.ipynb  jmp_l_finetune_lora.py  jmp_l_finetune_lora_matbench_discovery.py  jmp_l_finetune_lora_qm9.py  jmp_l_finetune_lora_qm9_perf.py  jmp_l_finetune_lora_rmd17.py  jmp_l_pretrain.ipynb  launch_akaash.py  torchmdnet.py
config/pretrain_perlmutter/: goc.py  graphormer.py  torchmdnet.py
config/relax/: jmp-act-analysis-adj.ipynb  jmp-act-analysis.ipynb  jmp-act-test.ipynb  jmp-act-test.py  jmp-mpd.py
docs/: all_structures.pkl  index.html  search.json  slides.html
docs/notebooks/: relax-eval-all-16k.html
docs/public-notebooks/: fair-results-8k.html  problematic-samples.html
drafts/: animation.py  chemical_symbols_count_3.json  finetune_on_matbench.py  finetune_with_xyz.py  mptrj_element_count.py  mptrj_export_xyz.py  mptrj_get_data.py  node_feature_ml.py  run.py  test.ipynb  tsne.py  umap.py
experiments/: m3gnet_pretrain.py  run_test_finetune.py  run_test_pretrain.py  train_from_scratch.py
images/: frontier.Dockerfile
notebooks/: .gitignore  6-26-mace-sanity-check.ipynb  dataset-hists.ipynb  dataset-relaxed-energy.ipynb  direct.ipynb  escn.ipynb  fair-ckpts.ipynb  freq_ratios.npy  hists.ipynb  linref_tests.ipynb  m3gnet-postprocess.py  mace-dataset.ipynb  mace-matbench.py  mace.ipynb  matbench-discovery.py  matbench_discovery_ase.py  matbench_discovery_indices.py  matbench_discovery_linref.py  matbench_discovery_megnet_convert_json_to_ndjson.py  matbench_discovery_megnet_split.py  matbench_discovery_metadata.py  mpd-m3gnet.py  mpd-relax-data.ipynb  mpd-relax-mace.ipynb  mpd-relax.py  mpd.ipynb  mpd2.py  mphistplot copy.ipynb  mphistplot.ipynb  mpt-activation.ipynb  mptrj_composition.py  mptrj_filter.py  mptrj_filter_ids_and_reference.py  mptrj_linref.npy  mptrj_precompute.py  mptrj_precompute_v2.py  mptrj_reference.py  mptrj_reference_v2.py  mptrj_test.py  mptrj_test2.py  (+41 more)
public-notebooks/: fair-results-8k.ipynb  problematic-samples.ipynb
results_backup/MgSi-jmp-l-tsne-cosine-cutoff10A/: Mg_in_MgSi_jmp-l_block1_feature_tsne_cosine.npz  (+11 more)
scripts/: all_runs.csv  analyze-runs.py  distrelaxer-run.sh  distrelaxer.py  fairruns.py  fairrunsv2.py  flops.csv  flops.py  flops2.py  generate_metadata.py  hfdatasets.py  job-status.py  jobmetrics.py  lin_ref_coeffs.npz  oc20_all.py  oc20_hf.py  oc20_hf2.py  oc20_hf3.py  oc22-upload.py  oc22.py  sync-all-jobs.py  wandb_export_2024-06-14T12_20_48.230-04_00.csv
tests/: signal_host.py  summit_test.py
(+212 files in other folders)
