[project]
name = "jmp-peft"
version = "0.0.1"
dependencies = ["ll @ https://github.com/nimashoghi/ll/archive/main.zip", "rich", "lmdb", "beartype", "jaxtyping", "ruff"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_files = ["**/__tests__/*.py"]

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.ruff.lint]
ignore = ["F722", "F821"]

[tool.pixi.project]
channels = ["nvidia", "pytorch", "pyg", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jmp-peft = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
pytorch-cuda = "12.1.*"
torchvision = ">=0.17.2,<0.18"
pytorch = "<2.3"
torchaudio = ">=2.2.2,<2.3"
pytorch-scatter = ">=2.1.2,<2.2"
pyg = ">=2.5.2,<2.6"
pytorch-cluster = ">=1.6.3,<1.7"
pytorch-sparse = ">=0.6.18,<0.7"
frozendict = ">=2.4.4,<2.5"
wandb = ">=0.16.5,<0.17"
lovely-tensors = ">=0.1.15,<0.2"
matplotlib = ">=3.8.4,<3.9"
ipykernel = ">=6.29.3,<6.30"
numba = ">=0.59.1,<0.60"
pytorch-lightning = ">=2.2.2,<2.3"
cloudpickle = ">=3.0.0,<3.1"
einops = ">=0.8.0,<0.9"
pytest = ">=8.2.0,<8.3"
wrapt = ">=1.16.0,<1.17"
numpy = ">=1.26.4,<1.27"
nbformat = ">=5.10.4,<5.11"
nbval = ">=0.11.0,<0.12"
torchmetrics = ">=1.4.0.post0,<1.4.1"
typing-extensions = ">=4.11.0,<4.12"
varname = ">=0.13.1,<0.14"
pandas = ">=2.2.2,<2.3"
pyyaml = ">=6.0.1,<6.1"
plotly = ">=5.22.0,<5.23"
tqdm = ">=4.66.4,<4.67"
requests = ">=2.31.0,<2.32"
ipywidgets = ">=8.1.2,<8.2"
scikit-learn = ">=1.4.2,<1.5"
seaborn = ">=0.13.2,<0.14"
lovely-numpy = ">=0.2.12,<0.3"
networkx = ">=3.3,<4"
sympy = ">=1.12,<2"
lightning = ">=2.2.4,<2.3"
pymatgen = ">=2024.5.1,<2024.6"
ase = ">=3.22.1,<3.23"
jarvis-tools = ">=2024.4.20,<2024.5"
pydantic = ">=2.7.1,<2.8"
