[project]
name = "jmp-peft"
version = "0.0.1"
dependencies = ["torch-geometric"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_files = ["**/__tests__/*.py"]

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.ruff.lint]
ignore = ["F722", "F821"]

# [tool.pixi.project]
# channels = ["nvidia", "pytorch", "pyg", "conda-forge"]
# platforms = ["linux-64"]

# [tool.pixi.pypi-dependencies]
# jmp-peft = { path = ".", editable = true }
# ll = { git = "https://github.com/nimashoghi/ll.git", branch = "main" }
# rich = "*"
# lmdb = "*"
# beartype = "*"
# jaxtyping = "*"
# ruff = "*"

# [tool.pixi.tasks]

# [tool.pixi.dependencies]
# python = "3.10.*"
# pytorch-cuda = "12.1.*"
# pytorch = "2.3.*"
# frozendict = "*"
# wandb = "*"
# lovely-tensors = "*"
# matplotlib = "*"
# ipykernel = "*"
# numba = "*"
# pytorch-lightning = "*"
# cloudpickle = "*"
# einops = "*"
# pytest = "*"
# wrapt = "*"
# numpy = "*"
# nbformat = "*"
# nbval = "*"
# torchmetrics = "*"
# typing-extensions = "*"
# varname = "*"
# pandas = "*"
# pyyaml = "*"
# plotly = "*"
# tqdm = "*"
# requests = "*"
# ipywidgets = "*"
# scikit-learn = "*"
# seaborn = "*"
# lovely-numpy = "*"
# networkx = "*"
# sympy = "*"
# lightning = "*"
# pymatgen = "*"
# ase = "*"
# jarvis-tools = "*"
# pydantic = "*"
# pytorch-cluster = ">=1.6.3,<1.7"
# pytorch-scatter = ">=2.1.2,<2.2"
# pytorch-sparse = ">=0.6.18,<0.7"
